# rile-cli

./: README.md
.github/workflows/: release.yml
rile/: Cargo.toml
rile/src/: main.rs
