[package]
name = "rile"
version = "0.1.0"
edition = "2021"
authors = ["Abhinav Ramesh <abhinavramesh03@gmail.com>"]
description = "A CLI tool to search for files using natural language."
license = "MIT OR Apache-2.0"
repository = "https://github.com/AbhiByte/rile-cli"

[dependencies]
clap = { version = "4.5.18", features = ["derive", "std"] }

[[bin]]
name = "rile"
path = "src/main.rs"
